Network settings: WPAD: Show string when not provided

Bug: 804258
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I865bc4cf3fa00572775227e9b6ce455cfae57c85
Reviewed-on: https://chromium-review.googlesource.com/952464
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541455}
Former-commit-id: 7fc07db4d03dd7c212ac5369f078c71079523db8